fix vertical alignment

--- a/addons/onion-skinning/userscript.css
+++ b/addons/onion-skinning/userscript.css
@@ -26,6 +26,7 @@
 .sa-onion-settings-group {
   display: flex;
   justify-content: flex-end;
+  align-items: baseline;
 }
 
 .sa-onion-settings-header {
